nashorn/test/script/basic/JDK-8019805.js.EXPECTED
SyntaxError:32:for each can only be used with for..in
for each(var v=0;false;);
                ^
